3/13/2014
- version 2.1
- change README an provide example RedirectURI's that don't collide with protected content

3/12/2014
- added support for calling the userinfo endpoint in implicit flows ("token id_token")
- allow for returning account names, domain names or partial issuer identifiers in the discovered oidc_provider value
- normalize issuer filenames cq. no trailing slashes included anymore, no leading "https%3A%2F%2F"
- added configurable JWK key set retrieve interval
- improved error response handling

3/11/2014
- delete metadata files also when they do not parse as JSON
- strip charset utf-8 addition from application/json Content-Type
- allow to override default response_type in client metadata

3/10/2014
- version 2.0.1
- extend iat window to 10 minutes (due to interop test results Google/Mitre...)
- don't write more than strlen for metadata files

3/10/2014
- version 2.0
- Debian packaging
- more complete documentation of configuration primitives
- iat checking with 60 seconds slack and iat-based nonce caching
- support for HMAC verification (HS256, HS384, HS512)

3/9/2014
- improve javascript for implicit post
- always check the signature on the id_token now, Basic or Implicit
- factor out reading files in oidc_util 
- revert adding /0 at end of file
- add option to specify id_token_signed_response_alg during dynamic client registration
- check return value on oidc_base64url_decode_decrypt_string for state and session cookie
- allow token_endpoint and jwks_uri not to be set in OP metadata (for self-issued support)

3/6/2014
- add/fix termination of subrequest processing after sending javascript for implicit client profile
- support configuring/overriding the token_endpoint authentication method in client metadata
- improve HTTP call result checking for downloading Google JWKs
- minor documentation updates
- allow .client metadata to override global SSL validation setting for JWK downloads too
- cleanup resources used in Google JWK conversion